[gd_scene load_steps=5 format=3 uid="uid://dfvwvs00hsx7d"]

[ext_resource type="Script" path="res://m_timer.gd" id="1_xk6w1"]
[ext_resource type="FontFile" uid="uid://t3pwjxstanen" path="res://font/DarlingCoffee-V4qex.ttf" id="2_eah8e"]
[ext_resource type="Script" path="res://mtimer_main.gd" id="3_uda5e"]
[ext_resource type="Texture2D" uid="uid://dvhjtaguwta12" path="res://graphics/navigation_e.png" id="4_m4j7c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xk6w1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CountDown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -102.5
offset_right = 474.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.980392, 0.0980392, 0.0980392, 1)
theme_override_fonts/font = ExtResource("2_eah8e")
theme_override_font_sizes/font_size = 200
text = "00:00:00"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.985
anchor_right = 0.5
anchor_bottom = 0.993
offset_left = -90.0
offset_top = -136.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Hours"

[node name="Hours" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Minutes"

[node name="Minutes" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Seconds"

[node name="Seconds" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Reset"

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Start"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_eah8e")
text = "Stop"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_uda5e")

[node name="Left" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_m4j7c")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Control/Left" to="Control" method="_on_left_pressed"]
